--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <!-- Lato sinistro -->
-        <div class="collapse navbar-collapse justify-content-between" id="navbarSupportedContent">
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -46,10 +46,25 @@
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                           Supporto
                         </a>    
+                        </ul>
 
         <!-- Lato destro -->
-     
-
-
+        <ul class="navbar-nav">
+          <li class="nav-item">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                  aria-expanded="false">
+                  My PlayStation
+              </a>
+              <ul class="dropdown-menu dropdown-menu-light">
+                  <li><a class="dropdown-item" href="#">Profilo</a></li>
+                  <li><a class="dropdown-item" href="#">Amici</a></li>
+                  <li><a class="dropdown-item" href="#">Account</a></li>
+              </ul>
+          </li>
+          <button type="button" class="btn btn-dark">Accedi</button>
+          <li class="nav-item">
+              <img id="lente" src="./img/lens.svg" alt="search">
+          </li>
+      </ul>
 </body>
 </html>
