--- a/index.html
+++ b/index.html
@@ -66,5 +66,25 @@
               <img id="lente" src="./img/lens.svg" alt="search">
           </li>
       </ul>
+      </div>
+  </nav>  
+
+  <!-- Returnal -->
+  <main>
+    <section id="returnal">
+      <div class="container-fluid">
+          <div class="row">
+              <div class="col-12 col-lg-4">
+                  <img class="img-fluid" src="./img/returnal-hero-banner-logo.png" alt="hero-banner">
+                  <h1>Rompi il cerchio</h1>
+                  <p>Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascita in questo episodio
+                      thriller fantascientifico, disponibile in esclusiva su PS5.</p>
+                  <a href="#">Acquista ora</a>
+              </div>
+          </div>
+      </div>
+  </section>
+  </main>
+
 </body>
 </html>
