--- a/index.html
+++ b/index.html
@@ -1,90 +1,129 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="CSS/style.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="CSS/style.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-        <title>Playstation Matthias</title>
+  <title>Playstation Matthias</title>
 </head>
-<body>
-    <!-- Logo Sony -->
-    <header>
-        <img src="img/sony_logo.svg" alt="logo sony">
-    </header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <img src="img/play_logo.svg" alt="">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <!-- Lato sinistro -->
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      Giochi
-                    </a>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                          Hardware
-                        </a>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                          Servizi
-                        </a>
-                    <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                         Novità
-                        </a>
-                    <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                          Fai Acquisti
-                        </a>
-                    <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                          Supporto
-                        </a>    
-                        </ul>
 
-        <!-- Lato destro -->
-        <ul class="navbar-nav">
-          <li class="nav-item">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                  aria-expanded="false">
-                  My PlayStation
-              </a>
-              <ul class="dropdown-menu dropdown-menu-light">
-                  <li><a class="dropdown-item" href="#">Profilo</a></li>
-                  <li><a class="dropdown-item" href="#">Amici</a></li>
-                  <li><a class="dropdown-item" href="#">Account</a></li>
-              </ul>
-          </li>
-          <button type="button" class="btn btn-dark">Accedi</button>
-          <li class="nav-item">
-              <img id="lente" src="./img/lens.svg" alt="search">
-          </li>
+<body>
+  <!-- Logo Sony -->
+  <header>
+    <img src="img/sony_logo.svg" alt="logo sony">
+  </header>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <img src="img/play_logo.svg" alt="">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <!-- Lato sinistro -->
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+            Giochi
+          </a>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+            Hardware
+          </a>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+            Servizi
+          </a>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+            Novità
+          </a>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+            Fai Acquisti
+          </a>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+            Supporto
+          </a>
       </ul>
-      </div>
-  </nav>  
+
+      <!-- Lato destro -->
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            My PlayStation
+          </a>
+          <ul class="dropdown-menu dropdown-menu-light">
+            <li><a class="dropdown-item" href="#">Profilo</a></li>
+            <li><a class="dropdown-item" href="#">Amici</a></li>
+            <li><a class="dropdown-item" href="#">Account</a></li>
+          </ul>
+        </li>
+        <button type="button" class="btn rounded-pill btn-dark mx-2">Accedi</button>
+        <li class="nav-item">
+          <img id="lente" src="./img/lens.svg" alt="search">
+        </li>
+      </ul>
+    </div>
+  </nav>
 
   <!-- Returnal -->
   <main>
     <section id="returnal">
       <div class="container-fluid">
-          <div class="row">
-              <div class="col-12 col-lg-4">
-                  <img class="img-fluid" src="./img/returnal-hero-banner-logo.png" alt="hero-banner">
-                  <h1>Rompi il cerchio</h1>
-                  <p>Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascita in questo episodio
-                      thriller fantascientifico, disponibile in esclusiva su PS5.</p>
-                  <a href="#">Acquista ora</a>
-              </div>
+        <div class="row">
+          <div class="col-12 col-lg-4">
+            <img class="img-fluid" src="./img/returnal-hero-banner-logo.png" alt="hero-banner">
+            <h1>Rompi il cerchio</h1>
+            <p>Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascita in questo episodio
+              thriller fantascientifico, disponibile in esclusiva su PS5.</p>
+            <a href="#">Acquista ora</a>
           </div>
+        </div>
       </div>
-  </section>
+    </section>
+
+    <!-- Carosello -->
+
+    <section id="carosello">
+      <div class="container-fluid">
+        <div class="d-flex pt-4">
+          <div class="col-6 col-md-4 col-xl-2 rounded-lg">
+            <img class="thumbnail" src="./img/returnal-listing-thumb-01-ps5.jpg" alt="returnal">
+          </div>
+          <div class="col-6 col-md-4 col-xl-2 rounded-lg">
+            <img class="thumbnail" src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt="ratchet">
+          </div>
+          <div class="col-6 col-md-4 col-xl-2 rounded-lg">
+            <img class="thumbnail" src="./img/returnal-listing-thumb-01-ps5.jpg" alt="returnal">
+          </div>
+          <div class="col-6 col-md-4 col-xl-2 rounded-lg">
+            <img class="thumbnail" src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt="ratchet">
+          </div>
+          <div class="col-6 col-md-4 col-xl-2 rounded-lg">
+            <img class="thumbnail" src="./img/returnal-listing-thumb-01-ps5.jpg" alt="returnal">
+          </div>
+          <div class="col-6 col-md-4 col-xl-2 rounded-lg">
+            <img class="thumbnail" src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt="ratchet">
+          </div>
+        </div>
+
+      </div>
+
+    </section>
   </main>
 
 </body>
+
 </html>
